Ticket #320 (closed defect: fixed)

Opened 3 years ago

Last modified 2 years ago

Confusing error message with sockets creation

Reported by: courmisch Assigned to:
Priority: low Milestone: Bugs paradize
Component: Network Version: master
Severity: trivial Keywords:
Cc: Platform(s): all
Difficulty: hard Work status: Not started

Description

Some users seem to be confused with ipv4/ipv6 warnings (damn, they've never used SSH ???).

Change History

18/08/05 17:06:07 changed by courmisch

  • status changed from new to assigned.

18/08/05 17:27:57 changed by courmisch

(In [12232]) Don't print EAFNOSUPPORT error when the given name/address does not even resolve to IPv6 - though cosmetic that seemed to confuse a guy on the mailing list - refs #320.

A cleaner more clever solution would be better.

19/08/05 17:21:26 changed by courmisch

(In [12266]) Don't print EAFNOSUPPORT error - refs #320

21/08/05 10:28:46 changed by zorglub

damn, do you really think more than 1% of our users already used SSH ??? and do you really think than more than 20% of this % already saw these messages, as they generally don't have IPv6 ???

17/09/05 16:30:12 changed by courmisch

You have a point. That said, only users of SAP or users of an IPv6-enabled server with an IPv6-unable VLC client would ever see the messages...

17/09/05 17:00:58 changed by courmisch

(In [12583]) * print unreachable host as an error in net_OpenTCP (refs #320) * don't print IPv6 unreachable warning when IPv4 works fine * don't attempt SOCKS negociation when TCP connection failed * use "%s port %d" rather than "%s:%d" because the latter is

confusing with IPv6 adresses

* removed trailing spaces

17/09/05 17:04:58 changed by courmisch

  • difficulty changed from easy to hard.
  • milestone changed from 0.8.4-test1 to 0.8.5.

The only issue left is with UDP sockets handling that may cause "Destination unreachable" warnings when there is an IPv6 stack with no IPv6 connectivity, and a working IPv4 stack.

To fix this, network plugins have to be suppressed and merged in the core (not a good idea during a feature freeze), so I'm postponing this bug to the next version.

16/01/06 22:59:06 changed by zorglub

  • milestone changed from 0.8.5 feature freeze to 0.8.5-test1.

20/02/06 15:03:34 changed by zorglub

  • milestone changed from 0.8.5-test1 to Bugs paradize.

Still the same problem. As the bug is a side-effect of the modules stuff, reassigning to paradize

10/03/06 10:27:14 changed by courmisch

  • milestone changed from Bugs paradize to 0.8.6 features freeze.

10/03/06 10:31:17 changed by courmisch

(In [14703]) Clean up ListenTCP error handling (refs #320)

12/09/06 16:18:37 changed by courmisch

  • status changed from assigned to new.
  • owner deleted.

19/11/06 17:07:36 changed by zorglub

  • milestone changed from 0.9.0 features freeze to Bugs paradize.

23/11/06 13:15:55 changed by courmisch

  • status changed from new to closed.
  • resolution set to fixed.