Don't print EAFNOSUPPORT error when the given name/address does not even resolve to IPv6 - though cosmetic that seemed to confuse a guy on the mailing list - refs #320.

A cleaner more clever solution would be better.